<resources>
    <string name="app_name">卡哈科技</string>
    <string name="invalid_device_data">Invalid Device Data!</string>
    <string name="no_data">No data</string>
    <string name="not_supported">Not supported</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="supported">Supported</string>
    <string name="unknown">unknown</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_device">""</string>
    <string name="unknown_service">Unknown service</string>
    <string name="no_known_services">No known services</string>
    <string name="header_device_info">Device Info</string>
    <string name="header_raw_ad_records">Raw Ad Records</string>
    <string name="header_rssi_info">RSSI Info</string>
    <string name="header_scan_record">Scan Record</string>

    <!-- Formatters -->
    <string name="formatter_db">%sdb</string>
    <string name="formatter_item_count">蓝牙设备数: %s</string>

    <!-- Menu items -->
    <string name="menu_about">关于我们</string>
    <string name="menu_history">历史连接</string>

    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">搜索</string>
    <string name="menu_stop">停止</string>
    <string name="menu_share">Share</string>

    <!-- Labels -->
    <string name="label_as_array">As Array:</string>
    <string name="label_as_string">As String:</string>
    <string name="label_bluetooth_le_status">是否支持Bluetooth BLE:</string>
    <string name="label_bluetooth_status">设备的蓝牙状态:</string>
    <string name="label_bonding_state">Bonding State:</string>
    <string name="label_desc">Desc:</string>
    <string name="label_device_address">address:</string>
    <string name="label_device_class">Device Class:</string>
    <string name="label_device_major_class">Major Class:</string>
    <string name="label_device_services">Services:</string>
    <string name="label_device_name">Device Name:</string>
    <string name="label_first_rssi">First RSSI:</string>
    <string name="label_first_timestamp">First Timestamp:</string>
    <string name="label_last_rssi">Last RSSI:</string>
    <string name="label_last_timestamp">Last Timestamp:</string>
    <string name="label_rssi">信号:</string>
    <string name="label_running_average_rssi">Running Average RSSI:</string>
    <string name="label_state">状态: </string>
    <string name="label_uuid">UUID:</string>
    <string name="label_notify_data">Notify Data:\n</string>

    <string name="no_connected_device">您还没有添加设备</string>
    <string name="no_scan_device">周围没有扫描到设备</string>

    <string name="label_input">输入:</string>
    <string name="label_output">输出格式:</string>
    <string name="label_select_read_characteristic">点击选择可读服务</string>
    <string name="label_select_write_characteristic">点击选择可写服务</string>
    <string name="label_select_notify_characteristic">点击选择可通知服务</string>
    <string name="label_send">发送</string>
    <string name="recycle_send">循环发送</string>

    <string name="about_dialog_text">   使用权归卡哈科技有限公司所有</string>
</resources>
